--- a/logar.html
+++ b/logar.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login | Vize</title>
+    <script defer src="./assets/js/api/Post.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link rel="icon" href="./assets/img/vize.jpg" type="image/x-icon">
     <link rel="stylesheet" href="assets/css/base/base.css">
@@ -21,9 +22,9 @@
     <main class="container flex flex--coluna flex--centro">
         <section class="cartao">
             <form  class="login" id="form">              
-                <input class="input input__usuario" name="usuario" type="email" data-tipo="usuario" id="usuario" placeholder="Usuário" required>
+                <input class="input input__usuario" name="email" type="email" id="email" placeholder="Usuário" required>
                 <span class="input__mensagem--erro mensagem__erro--usuario"></span>
-                <input class="input input__senha" name="senha" type="password" data-tipo="senha" id="senha" placeholder="Senha" required>
+                <input class="input input__senha" name="password" type="password" id="password" placeholder="Senha" required>
                 <span class="input__mensagem--erro mensagem__erro--senha"></span>
                 <i class="fa fa-eye icone__senha" id="text"></i>
                 <i class="fa fa-eye-slash icone__senha" id="pass"></i>
@@ -33,8 +34,7 @@
         </section>
     </main>
     
-    <script src="./assets/js/app.js" ></script>
-    <script src="./assets/js/api/Post.js"></script>
+
 </body>
 
 </html>
