--- a/area.html
+++ b/area.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Área Logada | Vize</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <script defer src="assets/js/app.js" type="module"></script>
     <link rel="icon" href="./assets/img/vize.jpg" type="image/x-icon">
     <link rel="stylesheet" href="assets/css/base/base.css">
     <link rel="stylesheet" href="assets/css/componentes/botao.css">
@@ -19,7 +20,7 @@
     <main class="container flex flex--coluna flex--centro">
         <section class="cartao">
             <table class="tabela__usuario">
-                <thead>
+                <thead> Usuários
                     <tr>
                         <th>Id</th>
                         <th>Nome</th>
@@ -27,13 +28,12 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <td>0</td>
-                        <td>Mateus</td>
+                        <td></td>
+                        <td></td>
                     </tr>
             </table>
         </section>
     </main>
     <footer></footer>
-    <script src="assets/js/consulta.js" ></script>
 </body>
 </html>
