--- a/registrar.html
+++ b/registrar.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registrar | Vize</title>
-    <script defer src="assets/js/api/Post.js" type="module" ></script>
+    <script defer src="assets/js/app.js" type="module"></script>
     <link rel="icon" href="./assets/img/vize.jpg">
     <link rel="stylesheet" href="assets/css/base/base.css">
     <link rel="stylesheet" href="assets/css/componentes/botao.css">
@@ -21,17 +21,17 @@
     <main class="container flex flex--coluna flex--centro">
         <section class="cartao">
             <form class="registro" id="form">
-                <input type="email" id="email" class="input registro__usuario" placeholder="Usuário" required>
-                <input type="password" id="senha" class="input registro__senha" placeholder="Senha" required>
-                <input type="text" id="nome" class="input registro__nome" placeholder="Nome" required>
+                <input type="email" id="email" class="input registro__usuario" data-tipo="email" placeholder="Usuário" required>
+                <input type="password" id="senha" class="input registro__senha" data-tipo="senha" placeholder="Senha" required>
+                <input type="text" id="nome" class="input registro__nome" data-tipo="nome" placeholder="Nome" required>
                 <i class="fa fa-eye icone__senha" id="text"></i>
                 <i class="fa fa-eye-slash icone__senha" id="pass"></i>
                 <button type="submit" id="btn__registrar" class="botao botao__registrar">Registrar</button>
+                <span class="input__mensagem--erro mensagem__erro--usuario"></span>
             </form>
         </section>
     </main>
-    <footer>
-    </footer>
+    <footer></footer>
     
 </body>
 
